# IronScout2015

./: .gitignore  CAnalysis.cpp  CAnalysis.h  CAnalysisRunner.cpp  CAnalysisRunner.h  CAnalysisStation.cpp  CAnalysisStation.h  CCentralAbstractInterface.cpp  CCentralAbstractInterface.h  CCentralRunnerInterface.cpp  CCentralRunnerInterface.h  CCentralStationInterface.cpp  CCentralStationInterface.h  CCentralWidget.cpp  CCentralWidget.h  CGroup.cpp  CGroup.h  CGroupInterface.cpp  CGroupInterface.h  CMainWindow.cpp  CMainWindow.h  CMakeLists.txt  CRunner.cpp  CRunner.h  CRunnerInterface.cpp  CRunnerInterface.h  CStation.cpp  CStation.h  CStationInterface.cpp  CStationInterface.h  CTable.cpp  CTable.h  README.md  main.cpp
